# exp

./: CMakeLists.txt  GIT_WORKFLOW.txt  README.md  graph.txt  log.csv  log_with_clique.csv
analyze/: depth_subtree_summary.csv  depth_summary.csv  node_subtree_summary.csv  recursion_tree_ascii.txt  recursion_tree_mermaid.mmd  recursion_tree_view.md  top_nodes.csv
docs/: CONTRIBUTING_DOCS.md  bk_parallel_fundamentals.md  degeneracy_ordering.md  experiment_playbook.md  mpi_task_distribution.md  openmp_taskization.md  overview_and_howto.md  recursion_analysis_notebook.md  recursion_tree_logging.md  sequential_bk_analysis_report.md  sequential_bron_kerbosch.md  week0_foundation_modules.md
include/exp/: bitset.hpp  bron_kerbosch.hpp  degeneracy.hpp  graph.hpp  logger.hpp  recursion_tree_logger.hpp
notebooks/: recursion_analysis.ipynb
scripts/: README.md  analyze_recursion_log.py  run_mpi_prototype.sh  visualize_recursion_tree.py
src/: maximal_clique_bfs.cpp  maximal_clique_bk.cpp  maximal_clique_bk_omp.cpp  maximal_clique_mpi_bfs.cpp  maximal_clique_mpi_bk.cpp
tests/: bron_kerbosch_logging_test.cpp  bron_kerbosch_openmp_test.cpp  bron_kerbosch_test.cpp  degeneracy_test.cpp
